apps/hcm/overlays/prod/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hcm
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: prod.hcm.suramar.int
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hcm-frontend
                port:
                  number: 80
